@startuml diagramauml
!theme plain

class Usuario {
  - nombre: String
  - Apellidos: String
}

class Libro {
  - titulo: String
  - usuario_id: Usuario
}

class Reseña {
  - contenido: String
  - usuario_id: Usuario
  - libro_id: Libro
}

class Autor {
  - nombre: String
  - Apellido: String
}

class Categoria {
  - nombre: String
}

class LibroCategoria {
  - libro_id: Libro
  - categoria_id: Categoria
}

class LibroAutor {
  - libro_id: Libro
  - autor_id: Autor
}

Usuario "1" -- "0..*" Libro : reserva ->
Libro "*" -- "*" Autor : pertenece a ->
Libro "1" -- "*" LibroCategoria : clasificado en ->
Libro "1" -- "*" LibroAutor : clasificado en ->
Categoria "1" -- "*" LibroCategoria : clasificado en ->
Categoria "1" -- "*" LibroAutor : clasificado en ->
Libro "1" -- "*" Reseña : tiene ->
Reseña "*" -- "1" Usuario : escrita por ->

@enduml
